--- a/Icon.qrc
+++ b/Icon.qrc
@@ -1,10 +1,8 @@
 <RCC>
     <qresource prefix="/tool-icon">
         <file>tool-Icon/file.png</file>
-        <file>tool-Icon/file-selected.png</file>
         <file>tool-Icon/left.png</file>
-        <file>tool-Icon/left-selected.png</file>
         <file>tool-Icon/right.png</file>
-        <file>tool-Icon/right-selected.png</file>
+        <file>tool-Icon/explain.png</file>
     </qresource>
 </RCC>
